# pico-kvstore

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: host-unittest.yml
examples/: CMakeLists.txt  README.md  benchmark.c  hello.c  password.c  secure_hello.c  secure_kvs_init.c  secure_kvs_init_otp.c
host/: CMakeLists.txt  README.md  blockdevice_file.c  main.c
host/include/: blockdevice_file.h
include/: blockdevice_stage.h  crc32_ansi.h  kvstore.h  kvstore_logkvs.h  kvstore_securekvs.h  mbedtls_config.h
src/: blockdevice_stage.c  crc32_ansi.c  kvs_init.c  kvstore.c  kvstore_logkvs.c  kvstore_securekvs.c
tests/: CMakeLists.txt  README.md  blockdevice_fault.c  blockdevice_fault.h  main.c  test_fault.c  test_global_kvs.c  test_kvstore_logkvs.c  test_kvstore_securekvs.c  test_logkvs.c  test_securekvs.c  utils.c  utils.h
tests/integration/: CMakeLists.txt  main.c  test_global_kvs.c
tests/lib/: blockdevice_fault.c  blockdevice_fault.h
